// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link should allow nesting children inside 1`] = `
<ForwardRef(LinkWithRef)
  className=""
  to="url"
>
  <div>
    Extra content
  </div>
  <span>
    Label
  </span>
</ForwardRef(LinkWithRef)>
`;

exports[`Link should allow to set a custom class to the component 1`] = `
<ForwardRef(LinkWithRef)
  className=""
  to="url"
>
  label
</ForwardRef(LinkWithRef)>
`;

exports[`Link should render a react-router-dom Link 1`] = `
<ForwardRef(LinkWithRef)
  className=""
  to="url"
>
  label
</ForwardRef(LinkWithRef)>
`;
